--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
   "author": "Luisa de Miranda",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "pg": "^6.2.3",
+    "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^3.30.4"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
